# SunsetCraft_V2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
Save/: BlockReg.json  ChatGPTNoise.json  Input.json  Inputs.json  Item.json  NoiseData.json  imgui.ini
Sources/: BlockRegistry.cpp  BlockRegistry.h  Chunk.cpp  Chunk.h  ChunkRegistry.cpp  ChunkRegistry.h  DayNightCycle.cpp  DayNightCycle.h  Game.cpp  Game.h  Inventaire.cpp  Inventaire.h  MainMenu.cpp  MainMenu.h  NetworkLayer.cpp  NetworkLayer.h  Noise.cpp  Noise.h  RaycastHit.h  Sandbox.cpp  Sandbox.h  ShadowMap.cpp  ShadowMap.h  Sky.cpp  Sky.h  SunsetCraftInstance.cpp  SunsetCraftInstance.h  SunsetCraftModule.cpp  SunsetCraftModule.h  TestLayer.cpp  TestLayer.h  TextureRegistry.cpp  TextureRegistry.h  WorldParam.h  main.cpp
Sources/Hand/: HandRender.cpp  HandRender.h
Sources/Inventory/: BlockIconRender.cpp  BlockIconRender.h  Inventory.cpp  Inventory.h  ItemSlot.cpp  ItemSlot.h
Sources/Items/: Item.cpp  Item.h
Sources/Player/: MovementComponent.cpp  MovementComponent.h  PlayerScript.cpp  PlayerScript.h
Sources/Registry/: BlockRegistry.cpp  BlockRegistry.h  ItemRegistry.cpp  ItemRegistry.h  RegistryLoader.cpp  RegistryLoader.h  TextureRegistry.cpp
Sources/Shaders/: BlockIcon.frag  BlockIcon.vert  ChunkFragShader.frag  ChunkVertShader.vert  ShadowChunk.vert  SkyCube.frag  SkyCube.vert  WaterShader.frag  WaterShader.vert  shader.frag  shader.vert
Sources/WorldGen/: CaveGen.cpp  CaveGen.h  HaloGen.cpp  HaloGen.h  HeightGen.cpp  HeightGen.h  LandGen.cpp  LandGen.h  OreGen.cpp  OreGen.h  RiverGen.cpp  RiverGen.h  TreeGen.cpp  TreeGen.h  WaterGen.cpp  WaterGen.h  WorldGen.cpp  WorldGen.h
